--- a/02/P02a.ipynb
+++ b/02/P02a.ipynb
@@ -5,6 +5,7 @@
    "id": "f6468550",
    "metadata": {},
    "source": [
+    "# Práctica 2a \n",
     "Desarrollar una aplicación que lleve a cabo transformaciones de la imagen en\n",
     "tiempo real a través de una interfaz basada en trackbars o equivalente.\n",
     "\n",
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9248afb0",
    "metadata": {},
    "outputs": [
@@ -24,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "👉 Usa los sliders para transformar la imagen.\n",
+      "Usa los sliders para transformar la imagen.\n",
       "Pulsa ESC para salir.\n"
      ]
     }
@@ -43,19 +44,17 @@
     "def nothing(x):\n",
     "    pass\n",
     "\n",
+    "\n",
     "cv.createTrackbar(\"Tx\", \"Transformaciones\", w//2, w, nothing)\n",
     "cv.createTrackbar(\"Ty\", \"Transformaciones\", h//2, h, nothing)\n",
-    "\n",
     "cv.createTrackbar(\"Angulo\", \"Transformaciones\", 0, 360, nothing)\n",
     "cv.createTrackbar(\"Cx\", \"Transformaciones\", w//2, w, nothing)\n",
     "cv.createTrackbar(\"Cy\", \"Transformaciones\", h//2, h, nothing)\n",
-    "\n",
     "cv.createTrackbar(\"EscalaX\", \"Transformaciones\", 100, 200, nothing)  \n",
     "cv.createTrackbar(\"EscalaY\", \"Transformaciones\", 100, 200, nothing)\n",
-    "\n",
     "cv.createTrackbar(\"Uniforme\", \"Transformaciones\", 0, 1, nothing)\n",
     "\n",
-    "print(\"👉 Usa los sliders para transformar la imagen.\")\n",
+    "print(\"Usa los sliders para transformar la imagen.\")\n",
     "print(\"Pulsa ESC para salir.\")\n",
     "\n",
     "while True:\n",
@@ -130,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
