--- a/02/P02c.ipynb
+++ b/02/P02c.ipynb
@@ -5,7 +5,7 @@
    "id": "fd8158ad",
    "metadata": {},
    "source": [
-    "# Práctica 2b"
+    "# Práctica 2c"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
