--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -456,17 +456,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "7c2d6bd1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Haz click en 4 puntos fuente (verde), luego en 4 puntos destino (rojo).\n",
-      "Selecciona ahora los 4 puntos destino (rojo).\n",
-      "Calculando proyección...\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 93\u001b[39m\n\u001b[32m     90\u001b[39m     cv2.destroyAllWindows()\n\u001b[32m     92\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m93\u001b[39m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 50\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     47\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m cap.isOpened():\n\u001b[32m     48\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo se pudo abrir el video/cámara.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m50\u001b[39m ret, frame_ref = \u001b[43mcap\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     51\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ret:\n\u001b[32m     52\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo se pudo leer el primer frame.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
@@ -564,6 +567,102 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "158983ea",
+   "metadata": {},
+   "source": [
+    "### 1c. \n",
+    "- Desarrollar una aplicación que lleve a cabo distorsiones de la lente. Para ello\n",
+    "los coeficientes de distorsión deben gobernarse a través de una interfaz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "77a72663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "cx, cy = None, None\n",
+    "\n",
+    "def apply_distortion(image, k1, k2, p1, p2, k3, center=None):\n",
+    "    h, w = image.shape[:2]\n",
+    "    distCoeff = np.zeros((5,1), np.float64)\n",
+    "    distCoeff[0,0] = k1\n",
+    "    distCoeff[1,0] = k2\n",
+    "    distCoeff[2,0] = p1\n",
+    "    distCoeff[3,0] = p2\n",
+    "    distCoeff[4,0] = k3\n",
+    "\n",
+    "    cam = np.eye(3, dtype=np.float32)\n",
+    "    if center is None:\n",
+    "        cam[0,2] = w / 2.0\n",
+    "        cam[1,2] = h / 2.0\n",
+    "    else:\n",
+    "        cam[0,2] = center[0]\n",
+    "        cam[1,2] = center[1]\n",
+    "\n",
+    "    cam[0,0] = 10.0\n",
+    "    cam[1,1] = 10.0\n",
+    "\n",
+    "    distorted_img = cv2.undistort(image, cam, distCoeff)\n",
+    "    return distorted_img\n",
+    "\n",
+    "def mouse_click(event, x, y, flags, param):\n",
+    "    global cx, cy\n",
+    "    if event == cv2.EVENT_LBUTTONDOWN:\n",
+    "        cx, cy = x, y\n",
+    "\n",
+    "# --- Selecciona la fuente de vídeo ---\n",
+    "# Para cámara: usa 0\n",
+    "# Para archivo: sustituye por la ruta, ej. \"video.mp4\"\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "if not cap.isOpened():\n",
+    "    raise FileNotFoundError(\"No se pudo abrir la cámara o el archivo de vídeo\")\n",
+    "\n",
+    "cv2.namedWindow(\"Distorsion interactiva (Video)\")\n",
+    "cv2.setMouseCallback(\"Distorsion interactiva (Video)\", mouse_click)\n",
+    "\n",
+    "# --- Trackbars ---\n",
+    "cv2.createTrackbar(\"k1\", \"Distorsion interactiva (Video)\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"k2\", \"Distorsion interactiva (Video)\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"p1\", \"Distorsion interactiva (Video)\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"p2\", \"Distorsion interactiva (Video)\", 50, 100, lambda x: None)\n",
+    "cv2.createTrackbar(\"k3\", \"Distorsion interactiva (Video)\", 50, 100, lambda x: None)\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        print(\"Fin del vídeo o error de lectura.\")\n",
+    "        break\n",
+    "\n",
+    "    k1 = (cv2.getTrackbarPos(\"k1\", \"Distorsion interactiva (Video)\") - 50) / 5000.0\n",
+    "    k2 = (cv2.getTrackbarPos(\"k2\", \"Distorsion interactiva (Video)\") - 50) / 5000.0\n",
+    "    p1 = (cv2.getTrackbarPos(\"p1\", \"Distorsion interactiva (Video)\") - 50) / 5000.0\n",
+    "    p2 = (cv2.getTrackbarPos(\"p2\", \"Distorsion interactiva (Video)\") - 50) / 5000.0\n",
+    "    k3 = (cv2.getTrackbarPos(\"k3\", \"Distorsion interactiva (Video)\") - 50) / 5000.0\n",
+    "\n",
+    "    distorted = apply_distortion(frame, k1, k2, p1, p2, k3, center=(cx, cy) if cx is not None else None)\n",
+    "\n",
+    "    display = distorted.copy()\n",
+    "    if cx is not None and cy is not None:\n",
+    "        cv2.circle(display, (cx, cy), 5, (0, 0, 255), -1)\n",
+    "\n",
+    "    cv2.imshow(\"Distorsion interactiva (Video)\", display)\n",
+    "\n",
+    "    key = cv2.waitKey(1) & 0xFF\n",
+    "    if key == ord(\"q\") or key == 27:  # Q o ESC para salir\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   },
   {
@@ -854,7 +953,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
