--- a/02/P02a.ipynb
+++ b/02/P02a.ipynb
@@ -67,10 +67,12 @@
     "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
     "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
     "\n",
+    "    # Traslación\n",
     "    T = np.float32([[1, 0, tx],\n",
     "                    [0, 1, ty]])\n",
     "    img_T = cv.warpAffine(image, T, (w, h))\n",
     "\n",
+    "    # Rotación\n",
     "    M_translate1 = np.float32([[1, 0, -cx],\n",
     "                               [0, 1, -cy]])\n",
     "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
@@ -83,6 +85,7 @@
     "    M_rot = M3 @ M2 @ M1\n",
     "    img_R = cv.warpAffine(img_T, M_rot[:2], (w, h))\n",
     "\n",
+    "    # Escalado\n",
     "    if uniforme:\n",
     "        s = sx\n",
     "        S = np.float32([[s, 0, 0],\n",
