--- a/02/P02opcional.ipynb
+++ b/02/P02opcional.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0a076477",
    "metadata": {},
    "outputs": [
@@ -85,10 +85,12 @@
     "        cv.setTrackbarPos(\"Cy\", \"Transformaciones\", cy)\n",
     "        mouse_selected = False\n",
     "\n",
+    "    # Traslación\n",
     "    T = np.float32([[1, 0, tx],\n",
     "                    [0, 1, ty]])\n",
     "    img_T = cv.warpAffine(image, T, (w, h))\n",
     "\n",
+    "    # Rotación\n",
     "    M_translate1 = np.float32([[1, 0, -cx],\n",
     "                               [0, 1, -cy]])\n",
     "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
@@ -101,6 +103,7 @@
     "    M_rot = M3 @ M2 @ M1\n",
     "    img_R = cv.warpAffine(img_T, M_rot[:2], (w, h))\n",
     "\n",
+    "    # Escalado\n",
     "    if uniforme:\n",
     "        s = sx\n",
     "        S = np.float32([[s, 0, 0],\n",
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5ab29067",
    "metadata": {},
    "outputs": [
@@ -174,13 +177,13 @@
     "    elif event == cv2.EVENT_LBUTTONUP:\n",
     "        dragging = False\n",
     "\n",
-    "cv2.namedWindow(\"Traslación con ratón\")\n",
-    "cv2.setMouseCallback(\"Traslación con ratón\", mouse_drag)\n",
+    "cv2.namedWindow(\"Traslacion con raton\")\n",
+    "cv2.setMouseCallback(\"Traslacion con raton\", mouse_drag)\n",
     "\n",
     "while True:\n",
     "    M = np.float32([[1, 0, tx], [0, 1, ty]])\n",
     "    moved = cv2.warpAffine(clone, M, (clone.shape[1], clone.shape[0]))\n",
-    "    cv2.imshow(\"Traslación con ratón\", moved)\n",
+    "    cv2.imshow(\"Traslacion con raton\", moved)\n",
     "\n",
     "    key = cv2.waitKey(20) & 0xFF\n",
     "    if key == 27:\n",
@@ -282,12 +285,14 @@
     "        cv.setTrackbarPos(\"Cx\", \"Transformaciones\", cx)\n",
     "        cv.setTrackbarPos(\"Cy\", \"Transformaciones\", cy)\n",
     "\n",
+    "    # Traslación\n",
     "    total_tx = tx + tx_mouse\n",
     "    total_ty = ty + ty_mouse\n",
     "    T = np.float32([[1, 0, total_tx],\n",
     "                    [0, 1, total_ty]])\n",
     "    img_T = cv.warpAffine(image, T, (w, h))\n",
     "\n",
+    "    # Rotación\n",
     "    M_translate1 = np.float32([[1, 0, -cx],\n",
     "                               [0, 1, -cy]])\n",
     "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
@@ -299,6 +304,7 @@
     "    M_rot = M3 @ M2 @ M1\n",
     "    img_R = cv.warpAffine(img_T, M_rot[:2], (w,h))\n",
     "\n",
+    "    # Escalado\n",
     "    if uniforme:\n",
     "        s = sx\n",
     "        S = np.float32([[s,0,0],[0,s,0]])\n",
@@ -339,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "61bcc904",
    "metadata": {},
    "outputs": [
@@ -398,10 +404,12 @@
     "    sy = cv.getTrackbarPos(\"EscalaY\", \"Transformaciones\") / 100.0\n",
     "    uniforme = cv.getTrackbarPos(\"Uniforme\", \"Transformaciones\")\n",
     "\n",
+    "    # Traslación\n",
     "    T = np.float32([[1, 0, tx],\n",
     "                    [0, 1, ty]])\n",
     "    img_T = cv.warpAffine(frame, T, (w, h))\n",
     "\n",
+    "    # Rotación\n",
     "    M_translate1 = np.float32([[1, 0, -cx],\n",
     "                               [0, 1, -cy]])\n",
     "    M_rotate = cv.getRotationMatrix2D((0, 0), angle, 1.0)\n",
@@ -414,6 +422,7 @@
     "    M_rot = M3 @ M2 @ M1\n",
     "    img_R = cv.warpAffine(img_T, M_rot[:2], (w, h))\n",
     "\n",
+    "    # Escalado\n",
     "    if uniforme:\n",
     "        s = sx\n",
     "        S = np.float32([[s, 0, 0],\n",
@@ -425,12 +434,10 @@
     "\n",
     "    img_display = img_final.copy()\n",
     "\n",
-    "    # Punto de rotación (rojo)\n",
     "    cv.circle(img_display, (cx, cy), 5, (0, 0, 255), -1)\n",
     "    cv.putText(img_display, f\"({cx},{cy})\", (cx + 10, cy - 10),\n",
     "               cv.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
     "\n",
-    "    # Punto de traslación aplicado (verde)\n",
     "    tx_point, ty_point = w // 2 + tx, h // 2 + ty\n",
     "    cv.circle(img_display, (tx_point, ty_point), 5, (0, 255, 0), -1)\n",
     "    cv.putText(img_display, f\"({tx_point},{ty_point})\", (tx_point + 10, ty_point - 10),\n",
@@ -456,20 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "7c2d6bd1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 93\u001b[39m\n\u001b[32m     90\u001b[39m     cv2.destroyAllWindows()\n\u001b[32m     92\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m\"\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m\"\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m93\u001b[39m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 50\u001b[39m, in \u001b[36mmain\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     47\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m cap.isOpened():\n\u001b[32m     48\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo se pudo abrir el video/cámara.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m50\u001b[39m ret, frame_ref = \u001b[43mcap\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     51\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ret:\n\u001b[32m     52\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mNo se pudo leer el primer frame.\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Haz click en 4 puntos fuente (verde), luego en 4 puntos destino (rojo).\n",
+      "Selecciona ahora los 4 puntos destino (rojo).\n",
+      "Calculando proyección...\n"
      ]
     }
    ],
@@ -581,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "77a72663",
    "metadata": {},
    "outputs": [],
@@ -619,9 +623,6 @@
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
     "        cx, cy = x, y\n",
     "\n",
-    "# --- Selecciona la fuente de vídeo ---\n",
-    "# Para cámara: usa 0\n",
-    "# Para archivo: sustituye por la ruta, ej. \"video.mp4\"\n",
     "cap = cv2.VideoCapture(0)\n",
     "\n",
     "if not cap.isOpened():\n",
@@ -630,7 +631,7 @@
     "cv2.namedWindow(\"Distorsion interactiva (Video)\")\n",
     "cv2.setMouseCallback(\"Distorsion interactiva (Video)\", mouse_click)\n",
     "\n",
-    "# --- Trackbars ---\n",
+    "# Trackbars\n",
     "cv2.createTrackbar(\"k1\", \"Distorsion interactiva (Video)\", 50, 100, lambda x: None)\n",
     "cv2.createTrackbar(\"k2\", \"Distorsion interactiva (Video)\", 50, 100, lambda x: None)\n",
     "cv2.createTrackbar(\"p1\", \"Distorsion interactiva (Video)\", 50, 100, lambda x: None)\n",
@@ -658,7 +659,7 @@
     "    cv2.imshow(\"Distorsion interactiva (Video)\", display)\n",
     "\n",
     "    key = cv2.waitKey(1) & 0xFF\n",
-    "    if key == ord(\"q\") or key == 27:  # Q o ESC para salir\n",
+    "    if key == ord(\"q\") or key == 27:\n",
     "        break\n",
     "\n",
     "cap.release()\n",
@@ -675,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "2450e4e9",
    "metadata": {},
    "outputs": [
@@ -768,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "74a688c7",
    "metadata": {},
    "outputs": [],
@@ -807,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "6b48f639",
    "metadata": {},
    "outputs": [
@@ -953,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
