--- a/03a/P03a.ipynb
+++ b/03a/P03a.ipynb
@@ -18,6 +18,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b82d6be3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vídeo 'video2.mp4' creado correctamente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2 as cv\n",
+    "\n",
+    "imagen = cv.imread('images/imagen2.png')\n",
+    "if imagen is None:\n",
+    "    raise FileNotFoundError(\"No se encontró 'imagen2.png'.\")\n",
+    "\n",
+    "negativo = 255 - imagen\n",
+    "alto, ancho, canales = imagen.shape\n",
+    "\n",
+    "fps = 30\n",
+    "fourcc = cv.VideoWriter_fourcc(*'mp4v')\n",
+    "out = cv.VideoWriter('output/video2.mp4', fourcc, fps, (ancho, alto))\n",
+    "\n",
+    "for i in range(ancho + 1):\n",
+    "    frame = negativo.copy()\n",
+    "    frame[:, :i] = imagen[:, :i]\n",
+    "    out.write(frame)\n",
+    "\n",
+    "out.release()\n",
+    "cv.destroyAllWindows()\n",
+    "\n",
+    "print(\"Vídeo 'video2.mp4' creado correctamente.\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8814a85d",
    "metadata": {},
@@ -89,8 +128,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
