--- a/03a/P03a.ipynb
+++ b/03a/P03a.ipynb
@@ -65,6 +65,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f00d1b1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usa la trackbar 'Modo' (0=logarítmica, 1=exponencial) y 'Intensidad' para ajustar el efecto.\n",
+      "Usa la trackbar 'Modo' (0=logarítmica, 1=exponencial) y 'Intensidad' para ajustar el efecto.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "\n",
+    "for i in ['images/manzana.png', 'images/Playa.jpg']:\n",
+    "    imagen = cv.imread(i, cv.IMREAD_GRAYSCALE)\n",
+    "    if imagen is None:\n",
+    "        raise FileNotFoundError(\"No se encontró 'imagen5.png'.\")\n",
+    "\n",
+    "    imagen_norm = imagen / 255.0\n",
+    "\n",
+    "    def transformacion_logaritmica(img, c):\n",
+    "        return c * np.log(1 + img)\n",
+    "\n",
+    "    def transformacion_exponencial(img, c):\n",
+    "        return np.exp(c * img) - 1\n",
+    "\n",
+    "    def actualizar(_=None):\n",
+    "        modo = cv.getTrackbarPos(\"Modo\", \"Transformaciones\")\n",
+    "        intensidad = cv.getTrackbarPos(\"Intensidad\", \"Transformaciones\") / 10\n",
+    "        \n",
+    "        if modo == 0:\n",
+    "            salida = transformacion_logaritmica(imagen_norm, intensidad)\n",
+    "        else:\n",
+    "            salida = transformacion_exponencial(imagen_norm, intensidad)\n",
+    "        \n",
+    "        salida_norm = cv.normalize(salida, None, 0, 255, cv.NORM_MINMAX).astype(np.uint8)\n",
+    "        combinado = np.hstack((imagen, salida_norm))\n",
+    "        cv.imshow(\"Transformaciones\", combinado)\n",
+    "\n",
+    "    cv.namedWindow(\"Transformaciones\")\n",
+    "    cv.createTrackbar(\"Modo\", \"Transformaciones\", 0, 1, actualizar)\n",
+    "    cv.createTrackbar(\"Intensidad\", \"Transformaciones\", 10, 50, actualizar)\n",
+    "\n",
+    "    actualizar()\n",
+    "    print(\"Usa la trackbar 'Modo' (0=logarítmica, 1=exponencial) y 'Intensidad' para ajustar el efecto.\")\n",
+    "\n",
+    "    cv.waitKey(0)\n",
+    "    cv.destroyAllWindows()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "34d19650",
    "metadata": {},
