Commit third exercise

--- a/03a/Ejemplos_03a.ipynb
+++ b/03a/Ejemplos_03a.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cfc54c88-d88a-4f67-ba68-18b20ad82e3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vídeo guardado como salida.mp4\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2 as cv\n",
     "\n",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "64a3677e-bdb3-4f47-8145-305883113d59",
    "metadata": {},
    "outputs": [],
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b4b5a2fe-c73a-4a67-a02f-4cdde9d215af",
    "metadata": {},
    "outputs": [],
@@ -79,10 +87,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4bd1cb18-481e-4c65-9a57-f59f161416ba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 8\u001b[39m, in \u001b[36mtrackbar\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtrackbar\u001b[39m(x):\n\u001b[32m      7\u001b[39m     brillo = cv.getTrackbarPos(\u001b[33m'\u001b[39m\u001b[33mbrillo\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mOperadores Puntuales\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     contraste = \u001b[43mcv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetTrackbarPos\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcontraste\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mOperadores Puntuales\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m     a = contraste/\u001b[32m50\u001b[39m\n\u001b[32m     11\u001b[39m     b = brillo-\u001b[32m50\u001b[39m\n",
+      "\u001b[31merror\u001b[39m: OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n"
+     ]
+    }
+   ],
    "source": [
     "# Operadores puntuales\n",
     "import numpy as np\n",
@@ -115,22 +135,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b796bfe5-b9cc-4669-b1b9-0123bbea5db9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\YO\\AppData\\Local\\Temp\\ipykernel_18452\\1809647945.py:16: RuntimeWarning: invalid value encountered in power\n",
-      "  image2 = 255*(image2/255)**(1/(gamma+0.001))\n",
-      "C:\\Users\\YO\\AppData\\Local\\Temp\\ipykernel_18452\\1809647945.py:19: RuntimeWarning: invalid value encountered in cast\n",
-      "  cv.imshow('Operadores Puntuales', image2.astype(np.uint8))\n",
-      "C:\\Users\\YO\\AppData\\Local\\Temp\\ipykernel_18452\\1809647945.py:16: RuntimeWarning: overflow encountered in power\n",
-      "  image2 = 255*(image2/255)**(1/(gamma+0.001))\n",
-      "C:\\Users\\YO\\AppData\\Local\\Temp\\ipykernel_18452\\1809647945.py:16: RuntimeWarning: overflow encountered in multiply\n",
-      "  image2 = 255*(image2/255)**(1/(gamma+0.001))\n"
+     "ename": "error",
+     "evalue": "OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 8\u001b[39m, in \u001b[36mtrackbar\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mtrackbar\u001b[39m(x):\n\u001b[32m      7\u001b[39m     brillo = cv.getTrackbarPos(\u001b[33m'\u001b[39m\u001b[33mbrillo\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mOperadores Puntuales\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m     contraste = \u001b[43mcv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetTrackbarPos\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mcontraste\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mOperadores Puntuales\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      9\u001b[39m     gamma = cv.getTrackbarPos(\u001b[33m'\u001b[39m\u001b[33mgamma\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mOperadores Puntuales\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     11\u001b[39m     a = contraste/\u001b[32m50\u001b[39m\n",
+      "\u001b[31merror\u001b[39m: OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n"
+     ]
+    },
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 9\u001b[39m, in \u001b[36mtrackbar\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m      7\u001b[39m brillo = cv.getTrackbarPos(\u001b[33m'\u001b[39m\u001b[33mbrillo\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mOperadores Puntuales\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      8\u001b[39m contraste = cv.getTrackbarPos(\u001b[33m'\u001b[39m\u001b[33mcontraste\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mOperadores Puntuales\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m gamma = \u001b[43mcv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgetTrackbarPos\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mgamma\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mOperadores Puntuales\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     11\u001b[39m a = contraste/\u001b[32m50\u001b[39m\n\u001b[32m     12\u001b[39m b = brillo-\u001b[32m50\u001b[39m\n",
+      "\u001b[31merror\u001b[39m: OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\highgui\\src\\window.cpp:868: error: (-215:Assertion failed) trackbar in function 'cv::getTrackbarPos'\n"
      ]
     }
    ],
@@ -175,13 +203,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\YO\\AppData\\Local\\Temp\\ipykernel_18452\\408682503.py:16: RuntimeWarning: overflow encountered in power\n",
-      "  image3 = 255*(image3/255)**(1/(gamma+0.001))\n",
-      "C:\\Users\\YO\\AppData\\Local\\Temp\\ipykernel_18452\\408682503.py:16: RuntimeWarning: overflow encountered in multiply\n",
-      "  image3 = 255*(image3/255)**(1/(gamma+0.001))\n"
+     "ename": "error",
+     "evalue": "OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\resize.cpp:4208: error: (-215:Assertion failed) !ssize.empty() in function 'cv::resize'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31merror\u001b[39m                                     Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 26\u001b[39m\n\u001b[32m     24\u001b[39m image2 = cv.imread(\u001b[33m'\u001b[39m\u001b[33mimages/cats.png\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     25\u001b[39m size = (image1.shape[\u001b[32m1\u001b[39m], image1.shape[\u001b[32m0\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m image2 = \u001b[43mcv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimage2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msize\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minterpolation\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcv\u001b[49m\u001b[43m.\u001b[49m\u001b[43mINTER_AREA\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     28\u001b[39m cv.imshow(\u001b[33m'\u001b[39m\u001b[33mOperadores Puntuales\u001b[39m\u001b[33m'\u001b[39m, image1)\n\u001b[32m     30\u001b[39m cv.createTrackbar(\u001b[33m'\u001b[39m\u001b[33mbrillo\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mOperadores Puntuales\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m50\u001b[39m, \u001b[32m100\u001b[39m, trackbar)\n",
+      "\u001b[31merror\u001b[39m: OpenCV(4.12.0) D:\\a\\opencv-python\\opencv-python\\opencv\\modules\\imgproc\\src\\resize.cpp:4208: error: (-215:Assertion failed) !ssize.empty() in function 'cv::resize'\n"
      ]
     }
    ],
@@ -227,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b51722ad-0589-479a-bef7-1c7750964b3f",
    "metadata": {},
    "outputs": [
@@ -301,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3297059e-9225-4563-a0b1-f3997f3e7233",
    "metadata": {},
    "outputs": [
@@ -426,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b7752278-5345-4bc1-80eb-23974951fc62",
    "metadata": {},
    "outputs": [],
@@ -470,9 +499,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:miniconda3-opencv]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-miniconda3-opencv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
