--- a/01/P01b.ipynb
+++ b/01/P01b.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ee9c31fa",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
     "cv.createTrackbar(\"Figura\", \"Editor\", 0, 2, nothing)\n",
     "cv.createTrackbar(\"B\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"G\", \"Editor\", 0, 255, nothing)\n",
-    "cv.createTrackbar(\"R\", \"Editor\", 255, 255, nothing)\n",
+    "cv.createTrackbar(\"R\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"Grosor\", \"Editor\", 2, 10, nothing)\n",
     "\n",
     "\n",
@@ -71,7 +71,7 @@
     "    if event == cv.EVENT_LBUTTONDOWN:\n",
     "        drawing = True\n",
     "        ix, iy = x, y\n",
-    "    elif event == cv.EVENT_MOUSEMOVE and drawing:\n",
+    "    elif event == cv.EVENT_MOUSEMOVE and drawing: # vista en tiempo real\n",
     "        temp = image.copy()\n",
     "        if figura == 0:\n",
     "            cv.line(temp, (ix, iy), (x, y), color, thickness)\n",
@@ -81,7 +81,7 @@
     "            radius = int(((x - ix) ** 2 + (y - iy) ** 2) ** 0.5)\n",
     "            cv.circle(temp, (ix, iy), radius, color, thickness)\n",
     "        canvas = temp\n",
-    "    elif event == cv.EVENT_LBUTTONUP:\n",
+    "    elif event == cv.EVENT_LBUTTONUP: # dibujo en la imagen\n",
     "        drawing = False\n",
     "        if figura == 0:\n",
     "            cv.line(image, (ix, iy), (x, y), color, thickness)\n",
