--- a/01/P01opcional.ipynb
+++ b/01/P01opcional.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "7ce0b57c",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
       "Usa los sliders para cambiar figura, color, grosor y relleno.\n",
       "Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse, 6=Mano alzada\n",
       "Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\n",
-      "Tecla C = limpiar canvas, Z = deshacer, Y = rehacer\n",
+      "Tecla C = limpiar, Z = deshacer, Y = rehacer\n",
       "ESC para salir.\n"
      ]
     }
@@ -47,7 +47,7 @@
     "canvas = image.copy()\n",
     "drawing = False\n",
     "ix, iy = -1, -1\n",
-    "points = []  # para polilíneas y polígonos\n",
+    "points = []  # para polilíneas, polígonos y mano alzada\n",
     "\n",
     "# Historial para deshacer/rehacer\n",
     "history = [image.copy()]\n",
@@ -61,7 +61,7 @@
     "cv.createTrackbar(\"Figura\", \"Editor\", 0, 6, nothing)\n",
     "cv.createTrackbar(\"B\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"G\", \"Editor\", 0, 255, nothing)\n",
-    "cv.createTrackbar(\"R\", \"Editor\", 255, 255, nothing)\n",
+    "cv.createTrackbar(\"R\", \"Editor\", 0, 255, nothing)\n",
     "cv.createTrackbar(\"Grosor\", \"Editor\", 2, 20, nothing)\n",
     "cv.createTrackbar(\"Relleno\", \"Editor\", 0, 1, nothing)\n",
     "\n",
@@ -76,7 +76,7 @@
     "    thickness = cv.getTrackbarPos(\"Grosor\", \"Editor\")\n",
     "    relleno = cv.getTrackbarPos(\"Relleno\", \"Editor\")\n",
     "\n",
-    "    if figura not in [0,3,6] and relleno == 1:\n",
+    "    if figura not in [0,3,6] and relleno == 1: # relleno para figuras cerradas\n",
     "        thickness = -1\n",
     "\n",
     "    # Líneas, Rectángulos, Círculos, Elipses y Mano alzada\n",
@@ -102,7 +102,7 @@
     "            elif figura == 6:\n",
     "                cv.line(temp, points[-1], (x, y), color, thickness)\n",
     "                points.append((x, y))\n",
-    "            canvas[:] = temp\n",
+    "            canvas[:] = temp # copia los píxeles de temp en canvas (mismo objeto)\n",
     "        elif event == cv.EVENT_LBUTTONUP:\n",
     "            drawing = False\n",
     "            if figura == 0:\n",
@@ -135,22 +135,23 @@
     "        elif event == cv.EVENT_MOUSEMOVE and len(points)>0:\n",
     "            temp = image.copy()\n",
     "            preview_thickness = thickness if thickness>0 else 1\n",
-    "            cv.polylines(temp, [np.array(points)], False, color, preview_thickness)\n",
-    "            cv.line(temp, points[-1], (x,y), color, preview_thickness)\n",
+    "            cv.polylines(temp, [np.array(points)], False, color, preview_thickness) # líneas anteriores\n",
+    "            cv.line(temp, points[-1], (x,y), color, preview_thickness) # línea actual\n",
     "            for p in points:\n",
     "                cv.circle(temp, p, 4, (0,0,0), -1)\n",
     "                cv.circle(temp, p, 2, (255,255,255), -1)\n",
     "            canvas[:] = temp\n",
     "        elif event == cv.EVENT_RBUTTONDOWN and len(points)>1:\n",
     "            if figura == 3:\n",
-    "                cv.polylines(image, [np.array(points)], False, color, max(1,thickness))\n",
+    "                cv.polylines(image, [np.array(points)], False, color, max(1,thickness)) # False: no une el punto inicial con el final\n",
     "            elif figura == 4:\n",
     "                if thickness == -1:\n",
     "                    cv.fillPoly(image, [np.array(points)], color)\n",
     "                else:\n",
-    "                    cv.polylines(image, [np.array(points)], True, color, thickness)\n",
+    "                    cv.polylines(image, [np.array(points)], True, color, thickness) # True: une el punto inicial con el final\n",
     "            points = []\n",
     "            canvas[:] = image.copy()\n",
+    "\n",
     "            # Guardar estado en el historial\n",
     "            if history_index < len(history) - 1:\n",
     "                history = history[:history_index+1]\n",
@@ -161,13 +162,13 @@
     "\n",
     "# Vídeo\n",
     "height, width = canvas.shape[:2]\n",
-    "fourcc = cv.VideoWriter_fourcc(*'XVID')\n",
+    "fourcc = cv.VideoWriter_fourcc(*'XVID') # formato de vídeo\n",
     "out = cv.VideoWriter('output/dibujo_1opcional.avi', fourcc, 20.0, (width, height))\n",
     "\n",
     "print(\"Usa los sliders para cambiar figura, color, grosor y relleno.\")\n",
     "print(\"Figura: 0=Línea, 1=Rectángulo, 2=Círculo, 3=Polilínea, 4=Polígono, 5=Elipse, 6=Mano alzada\")\n",
     "print(\"Polilínea/polígono: clic izquierdo=punto, clic derecho=cerrar\")\n",
-    "print(\"Tecla C = limpiar canvas, Z = deshacer, Y = rehacer\")\n",
+    "print(\"Tecla C = limpiar, Z = deshacer, Y = rehacer\")\n",
     "print(\"ESC para salir.\")\n",
     "\n",
     "while True:\n",
