--- a/02/P02b.ipynb
+++ b/02/P02b.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9b83f348",
    "metadata": {},
    "outputs": [
@@ -32,19 +32,19 @@
     "\n",
     "src_points = []\n",
     "dst_points = []\n",
-    "phase = 0\n",
+    "phase = 0 # indicar si se seleccionan puntos de origen o de destino\n",
     "image = None\n",
     "clone = None\n",
     "ruta_salida_global = None\n",
     "\n",
     "def ordenar_cuatro_puntos(pts):\n",
     "    pts = np.array(pts, dtype=np.float32)\n",
-    "    s = pts.sum(axis=1)\n",
-    "    diff = np.diff(pts, axis=1)\n",
-    "    tl = pts[np.argmin(s)]\n",
-    "    br = pts[np.argmax(s)]\n",
-    "    tr = pts[np.argmin(diff)]\n",
-    "    bl = pts[np.argmax(diff)]\n",
+    "    s = pts.sum(axis=1) # x + y\n",
+    "    diff = np.diff(pts, axis=1) # y - x\n",
+    "    tl = pts[np.argmin(s)] # suma mínima -> esquina superior-izquierda\n",
+    "    br = pts[np.argmax(s)] # suma máxima -> esquina inferior-derecha\n",
+    "    tr = pts[np.argmin(diff)] # diferencia mínima -> superior-derecha\n",
+    "    bl = pts[np.argmax(diff)] # diferencia máximo -> inferior-izquierda\n",
     "    return np.array([tl, tr, br, bl], dtype=np.float32)\n",
     "\n",
     "def mouse_callback(event, x, y, flags, param):\n",
@@ -72,9 +72,9 @@
     "    H, _ = cv2.findHomography(src, dst)\n",
     "    h, w = clone.shape[:2]\n",
     "    warped = cv2.warpPerspective(clone, H, (w, h))\n",
-    "    mask = np.zeros((h, w), dtype=np.uint8)\n",
-    "    cv2.fillPoly(mask, [np.int32(dst)], 255)\n",
-    "    result = np.zeros_like(clone)\n",
+    "    mask = np.zeros((h, w), dtype=np.uint8) # fondo negro\n",
+    "    cv2.fillPoly(mask, [np.int32(dst)], 255) # hueco blanco para la proyección\n",
+    "    result = np.zeros_like(clone) # crear lienzo vacío\n",
     "    cv2.copyTo(warped, mask, result)\n",
     "    cv2.imshow(\"Proyeccion interactiva\", result)\n",
     "    cv2.imwrite(ruta_salida_global, result)\n",
