--- a/02/P02c.ipynb
+++ b/02/P02c.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6faf0d94",
    "metadata": {},
    "outputs": [],
@@ -33,11 +33,11 @@
     "def apply_distortion(image, k1, k2, p1, p2, k3, center=None):\n",
     "    h, w = image.shape[:2]\n",
     "    distCoeff = np.zeros((5,1), np.float64)\n",
-    "    distCoeff[0,0] = k1\n",
-    "    distCoeff[1,0] = k2\n",
-    "    distCoeff[2,0] = p1\n",
-    "    distCoeff[3,0] = p2\n",
-    "    distCoeff[4,0] = k3\n",
+    "    distCoeff[0,0] = k1 # radial k1\n",
+    "    distCoeff[1,0] = k2 # radial k2\n",
+    "    distCoeff[2,0] = p1  # tangencial p1\n",
+    "    distCoeff[3,0] = p2  # tangencial p2\n",
+    "    distCoeff[4,0] = k3 # radial k3\n",
     "\n",
     "    cam = np.eye(3, dtype=np.float32)\n",
     "    if center is None:\n",
@@ -47,8 +47,8 @@
     "        cam[0,2] = center[0]\n",
     "        cam[1,2] = center[1]\n",
     "\n",
-    "    cam[0,0] = 10.0\n",
-    "    cam[1,1] = 10.0\n",
+    "    cam[0,0] = 10.0 # Definir longitud focal x\n",
+    "    cam[1,1] = 10.0 # Definir longitud focal y\n",
     "\n",
     "    distorted_img = cv2.undistort(image, cam, distCoeff)\n",
     "    return distorted_img\n",
@@ -56,7 +56,7 @@
     "def mouse_click(event, x, y, flags, param):\n",
     "    global cx, cy\n",
     "    if event == cv2.EVENT_LBUTTONDOWN:\n",
-    "        cx, cy = x, y\n",
+    "        cx, cy = x, y # centro de distorsión\n",
     "\n",
     "image = cv2.imread('images/eii.png')\n",
     "if image is None:\n",
@@ -71,6 +71,7 @@
     "cv2.createTrackbar(\"k3\", \"Distorsion interactiva\", 50, 100, lambda x: None)\n",
     "\n",
     "while True:\n",
+    "    # punto medio en 50\n",
     "    k1 = (cv2.getTrackbarPos(\"k1\", \"Distorsion interactiva\") - 50) / 5000.0\n",
     "    k2 = (cv2.getTrackbarPos(\"k2\", \"Distorsion interactiva\") - 50) / 5000.0\n",
     "    p1 = (cv2.getTrackbarPos(\"p1\", \"Distorsion interactiva\") - 50) / 5000.0\n",
